--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,20 @@
 {
+  "functions": {
+    "api/invite/[id].js": {
+      "maxDuration": 10
+    },
+    "api/og-image.js": {
+      "maxDuration": 10
+    }
+  },
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    {
+      "source": "/invite/:id",
+      "destination": "/api/invite/[id]"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
   ]
 }
