Fix: Resolve Vercel function crash by removing invalid res.rewrite()
- Remove res.rewrite() which is not available in Vercel functions
- Update API to return 404 for non-bot requests (lets Vercel rewrite handle it)
- Configure vercel.json to route crawler requests to API function
- Maintain proper separation between crawler and human visitor handling

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,14 @@
 {
-  "functions": {
-    "api/og.js": {
-      "maxDuration": 10
-    }
-  },
   "rewrites": [
     {
       "source": "/invite/:id",
+      "has": [
+        {
+          "type": "header",
+          "key": "user-agent",
+          "value": ".*(facebookexternalhit|Twitterbot|LinkedInBot|WhatsApp|Slackbot|Discordbot|TelegramBot).*"
+        }
+      ],
       "destination": "/api/og?id=:id"
     },
     {
