--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
         {
           "type": "header",
           "key": "user-agent",
-          "value": ".*(facebookexternalhit|Twitterbot|LinkedInBot|WhatsApp|Slackbot|Discordbot|TelegramBot).*"
+          "value": ".*(facebookexternalhit|Twitterbot|LinkedInBot|WhatsApp|Slackbot|Discordbot|TelegramBot|Pinterest|Pinterestbot|redditbot|Googlebot|bingbot|Slurp|DuckDuckBot|baiduspider|yandex|facebookcatalog|Applebot|Twitterbot|Whatsapp).*"
         }
       ],
       "destination": "/api/og?id=:id"
