Fix Open Graph social media preview issues
Based on best practices research:
- Created proper 1200x630 OG image (correct 1.91:1 aspect ratio)
- Icon centered at 200x200 on white background (prevents cropping)
- Enhanced crawler detection (catches more bots/crawlers)
- Fixed image dimensions in meta tags (was 1200x1200, now 1200x630)
- Updated all references from invitation-preview.png to og-image.png

This fixes:
- Social previews showing index.html instead of dynamic content
- Icon being cropped/zoomed in social previews
- Pinterest Rich Pin detection failures
- Twitter card validation errors

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
         {
           "type": "header",
           "key": "user-agent",
-          "value": ".*(facebookexternalhit|Twitterbot|LinkedInBot|WhatsApp|Slackbot|Discordbot|TelegramBot|Pinterest|Pinterestbot|redditbot|Googlebot|bingbot|Slurp|DuckDuckBot|baiduspider|yandex|facebookcatalog|Applebot|Twitterbot|Whatsapp).*"
+          "value": ".*(bot|crawler|spider|scraper|facebookexternalhit|Twitterbot|LinkedInBot|WhatsApp|Slackbot|Discordbot|TelegramBot|Pinterest|redditbot|Googlebot|bingbot|Slurp|DuckDuckBot|baiduspider|yandex|facebookcatalog|Applebot|facebook|twitter|linkedin|discord|slack|telegram).*"
         }
       ],
       "destination": "/api/og?id=:id"
