--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "firebase:login": "firebase login",
+    "firebase:init-settings": "node scripts/init-settings.js",
+    "firebase:deploy-rules": "firebase deploy --only database",
+    "firebase:rules-local": "firebase serve --only database",
+    "firebase:emulator": "firebase emulators:start --only database"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -26,6 +31,7 @@
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "firebase-tools": "^14.16.0",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
